--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         working_dir: /var/www/app
         volumes:
             - .:/var/www/app:consistent
-#            - ./.docker/scripts/local.provision-packages.sh:/var/www/app/.docker/init.d/01-init.sh
+            - ./.docker/scripts/local.provision-packages.sh:/var/www/app/.docker/init.d/01-init.sh
 #            - ./.docker/scripts/local.provision-database.sh:/var/www/app/.docker/init.d/02-init.sh
             - ./.docker/config/nginx-site-dev.conf:/etc/nginx/conf.d/default.conf
         entrypoint: /var/www/app/.docker/scripts/local.entrypoint.sh
