--- a/.env.local
+++ b/.env.local
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_KEY=base64:dmS3PaboNQ83Un4+/OATNYKaY7MFGRylTdEt9rNxkMU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=https://localhost:8480
+APP_URL=http://localhost:8780
 LOG_CHANNEL=errorlog
 
 BROADCAST_DRIVER=log
